Fix properties tab flex blocks overflowing the tabs width

--- a/init/static/css/base.css
+++ b/init/static/css/base.css
@@ -130,6 +130,7 @@ input.aci, input.aci:focus {
 .asset_tab > div {
 	padding: 1em;
 	flex: 1 0 31em;
+	max-width: 100%;
 }
 .asset_tab > div > table > tbody > tr > th {
 	font-weight: normal;
